--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/purecss/pure-min.css"/>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" type="text/css" href="/purecss/pure-min.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/custom.css"/>
   </head>
   <body>
-    Hello
+    <div class="pure-g">
+      <div class="pure-u-1-3">
+        <form class="pure-form pure-u-1-1" method="post">
+          <fieldset>
+            <legend>Enter Username</legend>
+            <input name="nickname" id="name" type="text" placeholder="Nickname">
+            <button type="submit" class="pure-button pure-button-primary">Enter Game</button>
+          </fieldset>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
