--- a/markup/decision-frontpage.html
+++ b/markup/decision-frontpage.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/purecss/pure-min.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/custom.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/es6.styles.css"/>
     <title>Choose</title>
   </head>
   <body>
-    <div class="pure-g">
+    <div class="container">
       <div class="pure-u-1-2">
         <h2>Choose between download or upload</h2>
         <a class="pure-button" href="/display">Display</a>
         <a class="pure-button" href="/upload">Upload</a>
+      </div>
+      <div class="space"></div>
+      <div class="pure-g">
+        <div class="pure-u-1-6">
+          <a class="pure-button pure-button-primary" href="/">Change Nickname</a>
+        </div>
       </div>
     </div>
   </body>
