--- a/markup/upload.html
+++ b/markup/upload.html
@@ -3,34 +3,45 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/purecss/pure-min.css"/>
-    <link rel="stylesheet" type="text/css" href="/css/custom.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/es6.styles.css"/>
     <title>Upload</title>
   </head>
   <body>
-    <div class="pure-g">
+    <div class="container">
       <div class="pure-u-1-2">
         <h2>Upload a file from your PC</h2>
-        <form ref='uploadForm'
+        <form class="pure-form"
               id='uploadForm'
-              action='http://localhost:3000/upload'
               method='post'
               encType="multipart/form-data">
-          <input id="sampleFile" type="file" name="sampleFile" />
-          <input type='submit' value='Upload!' />
+
+          <div class="file-field">
+            <div class="pure-button-primary">
+              <span>Datei</span>
+              <input id="sampleFile" type="file" name="sampleFile" />
+            </div>
+            <div class="file-path-wrapper">
+              <input type="text"/>
+            </div>
+          </div>
+          <div class="space"></div>
+          <button id="submit" class="pure-button">Upload</button>
+
         </form>
+      </div>
+      <div class="space"></div>
+      <div class="pure-g">
+        <div class="pure-u-1-6">
+          <a class="pure-button pure-button-primary" href="/decision">Go back</a>
+        </div>
       </div>
     </div>
     <script type="text/javascript" src="/js/generate.js"></script>
+    <script type="text/javascript" src="/js/ajax.js"></script>
     <script>
-      var key = new Key();
-      key.generate();
 
-      var xhr = new XMLHttpRequest();
-      var value = document.getElementById('sampleFile').value;
-      console.log(value);
-      var json = {};
-      xhr.open("POST", "../../index.js");
-      xhr.send(JSON.stringify())
+      let key = new Key();
+      console.log(key.generate());
     </script>
   </body>
 </html>
