--- a/markup/download.html
+++ b/markup/download.html
@@ -9,12 +9,13 @@
   <body>
   <div class="container">
     <div class="pure-u-1-2">
-      <h2>Upload a file from your PC</h2>
-      <form method="post" action="" >
-        <input id="sampleFile" type="text" name="filename" />
+      <h2>Download File by entering Key</h2>
+      <form class="pure-form" method="post" action="" >
+        <input id="sampleFile" type="text"/>
         <input type='submit' class="pure-button" value='Display!' />
       </form>
     </div>
+    <div class="space"></div>
     <div class="pure-g">
       <div class="pure-u-1-6">
         <a class="pure-button pure-button-primary" href="/decision">Go back</a>
